[TN]Randomly black screen with 4K @ 60Hz in Ubuntu 20.04.LTS with two monitors
- Environment
NUC11TNKv7 - new device
OS: Ubuntu 20.04 LTS - list on support OS.
https://www.intel.com/content/www/us/en/support/articles/000005499/intel-nuc.html
Monitor(s): BenQ EW3270U and Samsung LU32J590UQRXXU
*monitors work perfectly on a separate Windows machine
one of the cables: https://www.amazon.co.uk/gp/product/B00B4CVV60/ref=ppx_yo_dt_b_asin_title_o01_s00?ie=UTF8&psc=1
- BIOS: 57
- Expected Behavior
Ubuntu 20.04 support 4K@60Hz.
- Actual Behavior
One monitor would frequently cut out (to black) and the other has an image that jumps around'
'issue is present when there is only 1 display, connected on either HDMI port
Please refer attached file for issue.
- References
TROUBLESHOOTING
Tried multiple different HDMI leads
Attempted to reduce the hz to 30 - Workable
Updated the bios
Tried both the hdmi ports on the NUC
Tried different ports on the monitors
Use USB-C connection - Thunderbolt to HDMI adapter - same issue
BIOS recovery - issue still present
Make sure that the OS updated to its latest version
Modify the IGD Minimum Memory and IGD Aperture Size settings (from Advanced > Devices > Video) to their biggest available option - no effect
Disable the phantom display
Check BIOS Setup for primary and secondary display
Run: xrandr --output HDMI1 --auto
Check the setting for 'Primary Video Port' and 'Secondary Video Port'
Customer verify the issue is not present in windows and it is probably related to UbuntuTNv5-4k-60-Ubuntu21.04